--- a/src/components/Benz/BenzStyles.css
+++ b/src/components/Benz/BenzStyles.css
@@ -1,7 +1,7 @@
 .handling {
     width: 100%;
     height: 100vh ;
-    background: url(../images/benz.jpg) no-repeat center center/cover;
+    background: url(../../images/benz.jpg) no-repeat center center/cover;
 }
 
 .handling .container {
