--- a/src/components/Contact/ContactStyles.css
+++ b/src/components/Contact/ContactStyles.css
@@ -1,6 +1,7 @@
 .contact {
     width: 100%;
-    height: 100vh ;
+    height: 130vh ;
+    background-color: #333;
     background: url(../../images/lamb.jpg) no-repeat center center/cover;
 }
 
@@ -21,8 +22,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    max-width: 600px;
-    margin: 4rem;
+    max-width: 200px;
 }
 
 .contact form{
@@ -44,7 +44,6 @@
 .contact form input, textarea{
     margin: .5rem;
     padding: .7rem 1.5rem;
-    /* background: rgba(255, 255, 255, 0.8); */
     border: none;
     border-radius: 5px;
     font-size: 1rem;
