--- a/src/components/navbar/NavStyle.css
+++ b/src/components/navbar/NavStyle.css
@@ -43,7 +43,7 @@
     color: rgba(255, 255, 255, 0.6);
 }
 
-@media screen and (max-width: 946px) {
+@media screen and (max-width: 940px) {
     .hamburger{
         display: block;
         z-index: 5;
@@ -111,9 +111,9 @@
 
 
 
-@media screen and (max-width: 465px) {
+@media screen and (max-width: 495px) {
     .nav-menu{
-        width: 75px;
+        width: 75%;
     }
     .navbar .slide-right{
         margin-left: 30%;
